fixing footer overlap

--- a/src/components/pages/CreateListing/Form.module.scss
+++ b/src/components/pages/CreateListing/Form.module.scss
@@ -14,5 +14,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 110px - 104px);
+  min-height: calc(100vh - 110px - 104px);
 }
